# unraid-rmcp

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile
.github/actions/setup-rust-soldr/: action.yml
.github/workflows/: ci.yml  release.yml
examples/: mock_unraid.rs
src/: app.rs  gql_typed.rs  graphql.rs  lib.rs  mock.rs
src/cli/: commands.rs  dispatch.rs  parse.rs
src/mcp/: schemas.rs  tools.rs
tests/: scenarios.rs  schema_contract.rs
tests/fixtures/: unraid-schema.graphql
tests/fixtures/scenarios/: degraded.json  disk-failing.json  healthy.json  parity-running.json
xtask/: Cargo.toml
